# duckdb-extension-redis

./: CMakeLists.txt  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: redis_extension.cpp  redis_secret.cpp
src/include/: redis_extension.hpp  redis_secret.hpp
